--- a/deploy/kubernetes/tracee-falcosidekick/falcosidekick.yaml
+++ b/deploy/kubernetes/tracee-falcosidekick/falcosidekick.yaml
@@ -1,3 +1,17 @@
+---
+kind: ConfigMap
+apiVersion: v1
+metadata:
+  name: tracee-webhook-config
+data:
+  cfg.yaml: |-
+    debug: true
+    # Reference: https://github.com/falcosecurity/falcosidekick/blob/master/config_example.yaml
+    # slack:
+    #   webhookurl: "https://hooks.slack.com/xxxxxxxx"
+    # teams:
+    #   webhookurl: "https://xxxxxxx"
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
