--- a/.github/workflows/pr-rules.yaml
+++ b/.github/workflows/pr-rules.yaml
@@ -25,6 +25,28 @@ jobs:
             gofmt -s -d .
             exit 1
           fi
+      - name: yaml-lint
+        uses: ibiqlik/action-yamllint@v3
+
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Cache Docker layers
+        uses: actions/cache@v2
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
+
+      - name: Build tracee-builder
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: ./Dockerfile.builder
+          load: true
+          tags: tracee-builder:latest
       - name: Build 
         run: make build
       - name: Build signatures
