--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "libbpf"]
-	path = tracee-ebpf/3rdparty/libbpf
-	url = https://github.com/libbpf/libbpf
+	path = 3rdparty/libbpf
+	url = git@github.com:libbpf/libbpf.git
