--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -263,34 +263,35 @@ jobs:
         id: set-matrix
         run: |
           declare -A job_names=(
-              ["GKE 5.4"]="0013845506cbdf2ca x86_64"
-              ["GKE 5.10"]="049b1b3a4a5fdf9fd x86_64"
-              ["GKE 5.15 x86_64"]="01f6d4f80f256ffe4 x86_64"
-              ["GKE 5.15 aarch64"]="079f308677600eebf aarch64"
-              ["AMZN2 5.10 x86_64"]="05d03d50b6008ede7 x86_64"
-              ["AMZN2 5.10 aarch64"]="05e46d0a87c96bf69 aarch64"
-              ["RHEL8 4.18 x86_64"]="08c6b52c312ffee85 x86_64"
-              ["Focal 5.4 x86_64"]="0c75089aa342ffa26 x86_64"
-              ["Focal 5.13 x86_64"]="094d5310a281c8679 x86_64"
-              ["Focal 5.13 aarch64"]="08f88e2a2bd1b72a7 aarch64"
-              ["Jammy 5.15 x86_64"]="0d01de8f7b26afe02 x86_64"
-              ["Jammy 5.15 aarch64"]="08e91aa07134e6a36 aarch64"
+              # ["GKE 5.4"]="0013845506cbdf2ca x86_64"
+              # ["GKE 5.10"]="049b1b3a4a5fdf9fd x86_64"
+              # ["GKE 5.15 x86_64"]="01f6d4f80f256ffe4 x86_64"
+              # ["GKE 5.15 aarch64"]="079f308677600eebf aarch64"
+              # ["AMZN2 5.10 x86_64"]="05d03d50b6008ede7 x86_64"
+              # ["AMZN2 5.10 aarch64"]="05e46d0a87c96bf69 aarch64"
+              # ["RHEL8 4.18 x86_64"]="08c6b52c312ffee85 x86_64"
+              # ["Focal 5.4 x86_64"]="0c75089aa342ffa26 x86_64"
+              # ["Focal 5.13 x86_64"]="094d5310a281c8679 x86_64"
+              # ["Focal 5.13 aarch64"]="08f88e2a2bd1b72a7 aarch64"
+              # ["Jammy 5.15 x86_64"]="0d01de8f7b26afe02 x86_64"
+              # ["Jammy 5.15 aarch64"]="08e91aa07134e6a36 aarch64"
               ["Jammy 5.19 x86_64"]="02691308713b4cec2 x86_64"
-              ["Jammy 5.19 aarch64"]="046579f8e52acb104 aarch64"
-              ["Lunar 6.2 x86_64"]="034e03e1bdb7c205f x86_64"
-              ["Lunar 6.2 aarch64"]="04b03463ee4e32182 aarch64"
-              ["Mantic 6.5 x86_64"]="0a44ad46e5c42e499 x86_64"
-              ["Mantic 6.5 aarch64"]="0387f77c4820c98db aarch64"
-              ["Mantic 6.6 x86_64"]="05b5ac8f6c43b3ca5 x86_64"
-              ["Mantic 6.6 aarch64"]="05c9d6cd9343f0a43 aarch64"
-              ["Noble 6.8 x86_64"]="0cc63426ae75d47c8 x86_64"
-              ["Noble 6.8 aarch64"]="0f5260685b3ec2293 aarch64"
-              ["Noble 6.10 x86_64"]="0ae23eabda70efc60 x86_64"
-              ["Noble 6.10 aarch64"]="01ce0f71400b5ff38 aarch64"
-              ["Noble 6.11 x86_64"]="0ce1f88aa63091921 x86_64"
-              ["Noble 6.11 aarch64"]="0123508488affb578 aarch64"
-              ["Noble 6.12 x86_64"]="0e38f3caba1b4234d x86_64"
-              ["Noble 6.12 aarch64"]="0547f429681dc1f2a aarch64"
+              # ["Jammy 5.19 aarch64"]="046579f8e52acb104 aarch64"
+              # ["Lunar 6.2 x86_64"]="034e03e1bdb7c205f x86_64"
+              # ["Lunar 6.2 aarch64"]="04b03463ee4e32182 aarch64"
+              # ["Mantic 6.5 x86_64"]="0a44ad46e5c42e499 x86_64"
+              # ["Mantic 6.5 aarch64"]="0387f77c4820c98db aarch64"
+              # ["Mantic 6.6 x86_64"]="05b5ac8f6c43b3ca5 x86_64"
+              # ["Mantic 6.6 aarch64"]="05c9d6cd9343f0a43 aarch64"
+              # ["Noble 6.8 x86_64"]="0cc63426ae75d47c8 x86_64"
+              # ["Noble 6.8 aarch64"]="0f5260685b3ec2293 aarch64"
+              # ["Noble 6.10 x86_64"]="0ae23eabda70efc60 x86_64"
+              # ["Noble 6.10 aarch64"]="01ce0f71400b5ff38 aarch64"
+              # ["Noble 6.11 x86_64"]="0ce1f88aa63091921 x86_64"
+              # ["Noble 6.11 aarch64"]="0123508488affb578 aarch64"
+              ["Noble 6.12 x86_64 new"]="07b57db75de3ad01c x86_64"
+              ["Noble 6.12 x86_64 old"]="0e38f3caba1b4234d x86_64"
+              # ["Noble 6.12 aarch64"]="0547f429681dc1f2a aarch64"
               # expand as needed
           )
           for num in 01; do
