--- a/builder/Dockerfile.alpine-tracee-make
+++ b/builder/Dockerfile.alpine-tracee-make
@@ -67,7 +67,7 @@ RUN TARGETARCH=$(uname -m | sed 's:x86_64:amd64:g' | sed 's:aarch64:arm64:g') &&
 # install Go tools
 RUN go install honnef.co/go/tools/cmd/staticcheck@2023.1.7 && \
     go install github.com/incu6us/goimports-reviser/v3@v3.8.2 && \
-    go install github.com/mgechev/revive@e33fb87 && \
+    go install github.com/mgechev/revive@v1.7.0 && \
     go install github.com/kisielk/errcheck@latest
 
 #
