--- a/builder/Dockerfile.ubuntu-tracee-make
+++ b/builder/Dockerfile.ubuntu-tracee-make
@@ -89,7 +89,7 @@ RUN GOROOT=/usr/local/go GOPATH=$HOME/go \
 # install revive
 
 RUN GOROOT=/usr/local/go GOPATH=$HOME/go \
-    go install github.com/mgechev/revive@e33fb87 && \
+    go install github.com/mgechev/revive@v1.7.0 && \
     cp $HOME/go/bin/revive /usr/bin/
 
 # install errcheck
