--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -90,41 +90,41 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
-      - name: Check if flags flags man/markdown docs were changed
-        id: changed-files
-        uses: tj-actions/changed-files@dcc7a0cba800f454d79fff4b993e8c3555bcc0a8 # v45.0.7
-        with:
-          files_yaml: |
-            md_files:
-              - "docs/docs/flags/**/*.1.md"
-            man_files:
-              - "docs/man/**/*.1"
-      - name: Ensure updates of *.1.md and *.1 pairs
-        if: ${{ steps.changed-files.outputs.md_files_any_modified == 'true' || steps.changed-files.outputs.man_files_any_modified == 'true' }}
-        run: |
-          md_files=$(echo "${{ steps.changed-files.outputs.md_files_all_modified_files }}" | xargs -n 1 basename | sed 's/\.1.md$//')
-          man_files=$(echo "${{ steps.changed-files.outputs.man_files_all_modified_files }}" | xargs -n 1 basename | sed 's/\.1$//')
+      # - name: Check if flags flags man/markdown docs were changed
+      #   id: changed-files
+      #   uses: tj-actions/changed-files@dcc7a0cba800f454d79fff4b993e8c3555bcc0a8 # v45.0.7
+      #   with:
+      #     files_yaml: |
+      #       md_files:
+      #         - "docs/docs/flags/**/*.1.md"
+      #       man_files:
+      #         - "docs/man/**/*.1"
+      # - name: Ensure updates of *.1.md and *.1 pairs
+      #   if: ${{ steps.changed-files.outputs.md_files_any_modified == 'true' || steps.changed-files.outputs.man_files_any_modified == 'true' }}
+      #   run: |
+      #     md_files=$(echo "${{ steps.changed-files.outputs.md_files_all_modified_files }}" | xargs -n 1 basename | sed 's/\.1.md$//')
+      #     man_files=$(echo "${{ steps.changed-files.outputs.man_files_all_modified_files }}" | xargs -n 1 basename | sed 's/\.1$//')
 
-          missing_updates=()
-          for base_name in $md_files; do
-            if ! grep -Fxq "$base_name" <<< "$man_files"; then
-              missing_updates+=("$base_name.1.md change requires corresponding $base_name.1 change")
-            fi
-          done
+      #     missing_updates=()
+      #     for base_name in $md_files; do
+      #       if ! grep -Fxq "$base_name" <<< "$man_files"; then
+      #         missing_updates+=("$base_name.1.md change requires corresponding $base_name.1 change")
+      #       fi
+      #     done
 
-          for base_name in $man_files; do
-            if ! grep -Fxq "$base_name" <<< "$md_files"; then
-              missing_updates+=("$base_name.1 change requires corresponding $base_name.1.md change")
-            fi
-          done
+      #     for base_name in $man_files; do
+      #       if ! grep -Fxq "$base_name" <<< "$md_files"; then
+      #         missing_updates+=("$base_name.1 change requires corresponding $base_name.1.md change")
+      #       fi
+      #     done
 
-          if [ ${#missing_updates[@]} -ne 0 ]; then
-            printf "%s\n" "${missing_updates[@]}"
-            echo "--- How to Fix it ---"
-            echo " 1. Modify only '.1.md' files, updating the date in '.1.md' files if needed."
-            echo " 2. Run 'make -f builder/Makefile.man man-run' to update '.1' files."
-            exit 1
-          fi
+      #     if [ ${#missing_updates[@]} -ne 0 ]; then
+      #       printf "%s\n" "${missing_updates[@]}"
+      #       echo "--- How to Fix it ---"
+      #       echo " 1. Modify only '.1.md' files, updating the date in '.1.md' files if needed."
+      #       echo " 2. Run 'make -f builder/Makefile.man man-run' to update '.1' files."
+      #       exit 1
+      #     fi
   #
   # CODE VERIFICATION
   #
