--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -26,7 +26,7 @@ updates:
       - "/signatures/helpers"
       - "/cmd/traceectl"
     schedule:
-      interval: "daily"
+      interval: "weekly"
     commit-message:
       prefix: '[dependabot][gomod-security] - '
     groups:
