fix(ci): github actions do not support yaml anchor
The anchor was introduced in 8d9ba5d.

--- a/.github/workflows/codeql.yaml
+++ b/.github/workflows/codeql.yaml
@@ -3,7 +3,7 @@ name: "CodeQL Advanced"
 on:
   workflow_dispatch: {}
 
-  push: &common-config
+  push:
     branches:
       - "main"
       - "release-v*.*.*"
@@ -13,7 +13,13 @@ on:
       - "**/*.go"
 
   pull_request:
-    <<: *common-config
+    branches:
+      - "main"
+      - "release-v*.*.*"
+    paths:
+      - "**/*.c"
+      - "**/*.h"
+      - "**/*.go"
 
 jobs:
   analyze:
